# solaana-sdk-c

./: README.md
Source/SolanaPlugin/: SolanaPlugin.Build.cs
Source/SolanaPlugin/Private/: SolanaManager.cpp
Source/SolanaPlugin/Public/: SolanaManager.h
solana-c-sdk-main/: Cargo.toml  README.md  anchor_counter.json  build.sh  cbindgen.toml  generate.sh  generate_c_interface  generate_c_interface.c  test  test.c  test.json  test.sh  wallet_keypair.json  wallet_keypair_mint.json  wallet_keypair_recipient.json  wallet_keypair_recipient2.json
solana-c-sdk-main/header/: anchor_counter_interface.c
solana-c-sdk-main/src/: client.rs  lib.rs  smart_contract.rs  token.rs  wallet.rs
