[package]
name = "solana-c-sdk"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
solana-sdk = "2.0.13"
solana-client = "2.0.13"
solana-transaction-status = "2.0.13"
spl-token = "6.0.0"
spl-associated-token-account = "5.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-account-decoder = "2.0.18"
tokio = { version = "1", features = ["full"] }
solana-program = "2.0.18"
borsh = "0.10.3"
shellexpand = "2.1.0"
sha2 = "0.9"